--- a/SceytChatUiKit/src/main/res/drawable/sceyt_shadow_to_left.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_shadow_to_left.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="180"
-        android:endColor="#FFFFFF"
+        android:endColor="@color/sceyt_color_bg"
         android:startColor="#00FFFFFF"
         android:type="linear" />
 </shape>
