--- a/SceytChatUiKit/src/main/res/layout/sceyt_media_item_image.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_media_item_image.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
