--- a/SceytChatUiKit/src/main/res/layout/sceyt_record_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_record_view.xml
@@ -52,12 +52,11 @@
             android:id="@+id/layoutEffect1"
             android:layout_width="90dp"
             android:layout_height="50dp"
-            android:background="#ffffff"
+            android:background="@color/sceyt_color_bg"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:backgroundTint="@color/colorAccent"
             tools:visibility="visible" />
 
         <View
@@ -70,7 +69,6 @@
             app:layout_constraintBottom_toBottomOf="@+id/layoutEffect1"
             app:layout_constraintStart_toEndOf="@+id/layoutEffect1"
             app:layout_constraintTop_toTopOf="@+id/layoutEffect1"
-            tools:backgroundTint="@color/colorAccent"
             tools:visibility="visible" />
 
         <ImageView
@@ -114,10 +112,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="6dp"
         android:layout_marginBottom="25dp"
-        android:background="#FFFFFF"
+        android:layerType="hardware"
         android:translationZ="2dp"
         android:visibility="gone"
-        app:cardBackgroundColor="#FFFFFF"
+        app:cardBackgroundColor="@color/sceyt_color_bg"
         app:cardCornerRadius="20dp"
         app:cardElevation="2dp"
         app:cardPreventCornerOverlap="false"
@@ -167,6 +165,7 @@
         android:layout_marginEnd="6dp"
         android:layout_marginBottom="25dp"
         android:gravity="center_horizontal"
+        android:layerType="hardware"
         android:orientation="vertical"
         android:translationZ="4dp"
         android:visibility="gone"
@@ -179,7 +178,7 @@
             android:layout_width="42dp"
             android:layout_height="42dp"
             android:background="@drawable/sceyt_bg_circle"
-            android:backgroundTint="@color/sceyt_color_white"
+            android:backgroundTint="@color/sceyt_color_bg"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/sceyt_ic_stop_voice" />
 
@@ -191,11 +190,10 @@
         android:layout_height="44dp"
         android:layout_marginEnd="6dp"
         android:layout_marginBottom="4dp"
-        android:background="#FFFFFF"
         android:clickable="true"
         android:focusable="true"
         android:translationZ="2dp"
-        app:cardBackgroundColor="#FFFFFF"
+        app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="22dp"
         app:cardElevation="2dp"
         app:cardPreventCornerOverlap="false"
