--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="com.sceyt.chat.ui.R" />
+        <import type="com.sceyt.sceytchatuikit.R" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
