Added logic to set message body and date position depend body width.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
@@ -45,8 +45,9 @@
             android:id="@+id/messageBody"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="4dp"
+            android:layout_marginEnd="12dp"
             android:layout_marginBottom="8dp"
             android:autoLink="web"
             android:textColor="@color/sceyt_color_text_themed"
@@ -66,7 +67,8 @@
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="2dp"
             android:includeFontPadding="false"
-            android:paddingHorizontal="8dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="8dp"
             app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@id/layoutDetails"
             app:sceytDateStatusViewDateTextColor="@color/sceyt_color_gray_400"
