--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
@@ -33,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:paddingTop="2dp"
         android:layout_toEndOf="@+id/avatar"
         android:background="@drawable/sceyt_bg_inc_message">
 
@@ -41,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="6dp"
             android:fontFamily="@font/roboto_medium"
             android:singleLine="true"
             android:textColor="@color/sceyt_color_accent"
@@ -94,7 +95,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="2dp"
-            android:paddingHorizontal="8dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="8dp"
             app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@id/layoutDetails"
             app:sceytDateStatusViewDateTextColor="@color/sceyt_color_gray_400"
