Creating logic to add/remove reactions is in process.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -44,6 +44,9 @@
         <attr name="sceytUiMediaLoaderColor" format="reference" />
         <attr name="sceytUiFileAttachmentIcon" format="reference" />
 
+        <attr name="sceytUiSelfReactionBackgroundColor" format="reference" />
+        <attr name="sceytUiSelfReactionBorderColor" format="reference" />
+
 
     </declare-styleable>
 </resources>
