--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
@@ -112,7 +112,8 @@
         android:layout_marginEnd="3dp"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:paddingTop="4dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvReplyCount"
