--- a/SceytChatUiKit/src/main/res/values/colors.xml
+++ b/SceytChatUiKit/src/main/res/values/colors.xml
@@ -39,5 +39,6 @@
     <color name="sceyt_progress_bg_color">#6617191C</color>
     <color name="sceyt_color_admin_role">#7A6EF6</color>
     <color name="sceyt_color_disabled">#BFBFC2</color>
+    <color name="sceyt_self_reaction_color">#4BBEFD</color>
 
 </resources>
