--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_voice.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_voice.xml
@@ -67,8 +67,9 @@
             android:id="@+id/messageBody"
             android:layout_width="@dimen/bodyMaxWidth"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="8dp"
+            android:paddingBottom="2dp"
             app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
             app:layout_constraintHorizontal_bias="0"
@@ -149,24 +150,24 @@
                 app:layout_constraintStart_toEndOf="@id/playPauseButton"
                 tools:text="00:00" />
 
-            <com.sceyt.sceytchatuikit.presentation.customviews.SceytDateStatusView
-                android:id="@+id/messageDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:sceytDateStatusViewDateTextColor="@color/sceyt_color_gray_400"
-                app:sceytDateStatusViewDateTextSize="@dimen/tinyTextSize"
-                app:sceytDateStatusViewFirstStatus="false"
-                app:sceytDateStatusViewStatusIconMargin="5dp"
-                app:sceytDateStatusViewStatusIconSize="15dp"
-                tools:layout_editor_absoluteX="208dp"
-                tools:layout_editor_absoluteY="24dp"
-                tools:sceytDateStatusViewDateText="00:37"
-                tools:sceytDateStatusViewStatusIcon="@drawable/sceyt_ic_status_delivered" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.sceyt.sceytchatuikit.presentation.customviews.SceytDateStatusView
+            android:id="@+id/messageDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="2dp"
+            android:paddingHorizontal="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
+            app:layout_constraintEnd_toEndOf="@id/layoutDetails"
+            app:sceytDateStatusViewDateTextColor="@color/sceyt_color_gray_400"
+            app:sceytDateStatusViewDateTextSize="@dimen/tinyTextSize"
+            app:sceytDateStatusViewFirstStatus="false"
+            app:sceytDateStatusViewStatusIconMargin="5dp"
+            app:sceytDateStatusViewStatusIconSize="15dp"
+            tools:sceytDateStatusViewDateText="00:37"
+            tools:sceytDateStatusViewStatusIcon="@drawable/sceyt_ic_status_delivered" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
