Added logic to mention users in message, in all message types. Fixed som issues connected with mention users. Added clickable span to mentioned user.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_files_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_files_message.xml
@@ -92,7 +92,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvForwarded"
             app:layout_constraintWidth_max="@dimen/bodyMaxWidth" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <com.sceyt.sceytchatuikit.presentation.customviews.SceytClickableTextView
             android:id="@+id/messageBody"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
