Created logic to show mentioned symbol in channels list view, when mentioned current user. Improved logic to load channel members, when first time opened conversation page.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
@@ -74,7 +74,7 @@
             android:maxLines="2"
             android:textColor="@color/sceyt_color_gray_400"
             android:textSize="@dimen/smallTextSize"
-            app:layout_constraintEnd_toStartOf="@+id/unreadMessagesCount"
+            app:layout_constraintEnd_toStartOf="@+id/icMention"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/channelTitle"
             app:layout_constraintTop_toBottomOf="@+id/channelTitle"
@@ -105,18 +105,33 @@
             tools:sceytDateStatusViewDateText="12:28"
             tools:sceytDateStatusViewStatusIcon="@drawable/sceyt_ic_status_delivered" />
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/icMention"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="5dp"
+            android:padding="2dp"
+            android:layout_marginEnd="8dp"
+            app:srcCompat="@drawable/sceyt_ic_mention"
+            android:background="@drawable/sceyt_bg_circle"
+            android:gravity="center"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@+id/unreadMessagesCount"
+            app:layout_constraintTop_toBottomOf="@+id/dateStatus"
+            tools:visibility="visible" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/unreadMessagesCount"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_height="20dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:background="@drawable/sceyt_bg_corners_30"
+            android:gravity="center"
             android:includeFontPadding="false"
             android:maxLength="3"
+            android:minWidth="20dp"
             android:paddingHorizontal="6dp"
-            android:paddingVertical="2dp"
             android:singleLine="true"
             android:textColor="@color/sceyt_color_white"
             android:textSize="@dimen/extraSmallTextSize"
