--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_files_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_files_message.xml
@@ -69,19 +69,17 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="6dp"
-            android:layout_marginBottom="8dp"
             android:autoLink="phone|web|email"
             android:textColor="@color/sceyt_color_text_themed"
             android:textSize="@dimen/mediumTextSize"
             android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/rvFiles"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/viewReply"
-            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
-            tools:text="Lore ipsum  is the correct text which" />
+            tools:text="Lore ipsum  is the correct text which"
+            tools:visibility="visible" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvFiles"
