Improved logic to get link preview data. Imroved logic to disable message actions. UI fixes.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
@@ -67,9 +67,8 @@
             android:id="@+id/messageBody"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginHorizontal="12dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="12dp"
             android:layout_marginBottom="8dp"
             android:autoLink="web"
             android:textColor="@color/sceyt_color_text_themed"
@@ -87,17 +86,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="2dp"
+            android:layout_marginBottom="5dp"
             android:includeFontPadding="false"
             android:paddingStart="0dp"
-            android:paddingEnd="8dp"
+            android:paddingEnd="5dp"
             app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@id/layoutDetails"
             app:sceytDateStatusViewDateTextColor="@color/sceyt_color_gray_400"
             app:sceytDateStatusViewDateTextSize="@dimen/tinyTextSize"
             app:sceytDateStatusViewFirstStatus="false"
             app:sceytDateStatusViewStatusIconMargin="5dp"
-            app:sceytDateStatusViewStatusIconSize="15dp"
+            app:sceytDateStatusViewStatusIconSize="15.5dp"
             tools:sceytDateStatusViewDateText="00:37"
             tools:sceytDateStatusViewStatusIcon="@drawable/sceyt_ic_status_delivered" />
 
