--- a/SceytChatUiKit/src/main/res/values/sceyt_styles.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_styles.xml
@@ -118,4 +118,14 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="SceytReactionPopupAnimationNormal">
+        <item name="android:windowEnterAnimation">@anim/sceyt_anim_show_window</item>
+        <item name="android:windowExitAnimation">@anim/sceyt_anim_disappear_alpha</item>
+    </style>
+
+    <style name="SceytReactionPopupAnimationReversed">
+        <item name="android:windowEnterAnimation">@anim/sceyt_anim_show_window_reversed</item>
+        <item name="android:windowExitAnimation">@anim/sceyt_anim_disappear_alpha</item>
+    </style>
+
 </resources>
