--- a/SceytChatUiKit/src/main/res/layout/sceyt_popup_add_reaction.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_popup_add_reaction.xml
@@ -5,13 +5,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:cardBackgroundColor="@color/sceyt_color_white"
-        app:cardCornerRadius="35dp"
+        app:cardBackgroundColor="@color/sceyt_color_light_themed"
+        app:cardCornerRadius="22dp"
         app:cardElevation="2dp">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -27,6 +27,6 @@
             tools:itemCount="5"
             tools:listitem="@layout/sceyt_item_popup_reaction" />
 
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
