--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
@@ -145,14 +145,17 @@
 
     <ViewStub
         android:id="@+id/rvReactions"
-        android:layout_width="@dimen/bodyMaxWidth"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layoutDetails"
         android:layout_marginStart="3dp"
-        android:layout_toEndOf="@+id/avatar"
+        android:layout_marginTop="-5dp"
+        android:layout_marginBottom="2dp"
+        android:layout_alignStart="@+id/layoutDetails"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:orientation="horizontal"
         android:paddingTop="4dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible" />
 
 </RelativeLayout>
