--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_voice.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_voice.xml
@@ -117,7 +117,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/sceyt_ic_play"
-                app:tint="#FFFFFF"/>
+                app:tint="#FFFFFF" />
 
             <com.sceyt.sceytchatuikit.presentation.customviews.SceytCircularProgressView
                 android:id="@+id/loadProgress"
@@ -219,10 +219,12 @@
 
     <ViewStub
         android:id="@+id/rvReactions"
-        android:layout_width="@dimen/bodyMaxWidth"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layoutDetails"
         android:layout_marginStart="3dp"
+        android:layout_marginTop="-5dp"
+        android:layout_marginBottom="2dp"
         android:layout_toEndOf="@+id/avatar"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:orientation="horizontal"
