--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
@@ -104,11 +104,12 @@
 
     <ViewStub
         android:id="@+id/rvReactions"
-        android:layout_width="@dimen/bodyMaxWidth"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layoutDetails"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="3dp"
+        android:layout_marginTop="-5dp"
+        android:layout_marginBottom="2dp"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:paddingTop="4dp"
         android:visibility="gone"
@@ -118,7 +119,6 @@
         android:id="@+id/tvReplyCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rvReactions"
         android:layout_marginEnd="2dp"
         android:layout_toStartOf="@+id/toReplyLine"
         android:includeFontPadding="false"
