--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_reactions_recycler_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_reactions_recycler_view.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sceyt.sceytchatuikit.presentation.common.MaxWidthRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rvReactions"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:itemCount="1"
+    android:background="@drawable/sceyt_bg_corners_20"
+    android:backgroundTint="@color/sceyt_color_white"
+    android:elevation="1dp"
+    android:orientation="horizontal"
+    android:paddingHorizontal="6dp"
+    android:paddingVertical="2dp"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    tools:itemCount="5"
     tools:listitem="@layout/sceyt_item_reaction" />
