Added some improvements connected with support RTL. Removed some unused resources.

--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_broken_image.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_broken_image.xml
@@ -2,7 +2,8 @@
     android:width="118dp"
     android:height="118dp"
     android:viewportWidth="118"
-    android:viewportHeight="118">
+    android:viewportHeight="118"
+    android:autoMirrored="true">
   <path
       android:pathData="M0,0h118v118h-118z"
       android:fillColor="#F3F5F7"/>
