Added some improvements connected with support RTL.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_link.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_link.xml
@@ -21,7 +21,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvLinkName"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:ellipsize="middle"
@@ -32,7 +32,7 @@
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/tvLinkUrl"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/icLinkImage"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
