--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_file.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_file.xml
@@ -19,7 +19,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvFileName"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
         android:ellipsize="middle"
@@ -28,6 +28,7 @@
         android:textSize="@dimen/mediumTextSize"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/icFile"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Montagabold.pdf" />
@@ -36,10 +37,13 @@
         android:id="@+id/tvFileSizeAndDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
         android:layout_marginTop="2dp"
         android:textColor="@color/sceyt_color_gray_400"
         android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="@+id/tvFileName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toEndOf="@+id/icFile"
         app:layout_constraintTop_toBottomOf="@+id/tvFileName"
         tools:text="67 KB" />
 
