--- a/SceytChatUiKit/src/main/res/layout/sceyt_layout_searchable_toolbar.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_layout_searchable_toolbar.xml
@@ -22,7 +22,7 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginHorizontal="15dp"
         android:animateLayoutChanges="true"
         android:fontFamily="@font/roboto_medium"
         android:padding="10dp"
@@ -30,23 +30,27 @@
         android:textSize="@dimen/bigTextSize"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/icSearch"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/icBack"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Title" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/input"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginStart="15dp"
         android:animateLayoutChanges="true"
         android:background="@null"
+        android:gravity="center"
         android:hint="@string/sceyt_search"
         android:padding="10dp"
         android:textColor="@color/sceyt_color_text_themed"
         android:textColorHint="@color/sceyt_color_hint"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/icBack"
         app:queryHint="Search" />
 
