--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
@@ -101,6 +101,7 @@
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="8dp"
             android:autoLink="phone|web|email"
+            android:textAlignment="viewStart"
             android:textColor="@color/sceyt_color_text_themed"
             android:textSize="@dimen/mediumTextSize"
             app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
@@ -148,10 +149,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layoutDetails"
+        android:layout_alignStart="@+id/layoutDetails"
         android:layout_marginStart="3dp"
         android:layout_marginTop="-5dp"
         android:layout_marginBottom="2dp"
-        android:layout_alignStart="@+id/layoutDetails"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:orientation="horizontal"
         android:paddingTop="4dp"
