--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
@@ -71,6 +71,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="8dp"
             android:autoLink="phone|web|email"
+            android:textAlignment="viewStart"
             android:textColor="@color/sceyt_color_text_themed"
             android:textSize="@dimen/mediumTextSize"
             app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
