--- a/SceytChatUiKit/src/main/res/layout/sceyt_recycler_reply_container.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_recycler_reply_container.xml
@@ -39,6 +39,7 @@
         android:fontFamily="@font/roboto_medium"
         android:includeFontPadding="false"
         android:singleLine="true"
+        android:textAlignment="viewStart"
         android:textColor="@color/sceyt_color_accent"
         android:textSize="@dimen/extraSmallTextSize"
         app:layout_constrainedWidth="true"
@@ -70,17 +71,19 @@
         android:id="@+id/tvMessageBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="3dp"
         android:ellipsize="end"
         android:includeFontPadding="false"
         android:maxLines="2"
-        app:layout_constraintHorizontal_bias="0"
+        android:textAlignment="viewStart"
         android:textColor="@color/sceyt_color_black_themed"
         android:textSize="@dimen/smallTextSize"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/icMsgBodyStartIcon"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toEndOf="@+id/imageAttachment"
         app:layout_constraintTop_toBottomOf="@+id/tvName"
         tools:text="Waitifor." />
 
