Fixed view issues.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_media.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_media.xml
@@ -51,6 +51,7 @@
             android:singleLine="true"
             android:textColor="@color/sceyt_color_white"
             android:textSize="16sp"
+            app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@+id/tvDate"
             app:layout_constraintEnd_toStartOf="@+id/icShare"
             app:layout_constraintHorizontal_bias="0"
@@ -69,6 +70,7 @@
             android:lines="1"
             android:textColor="#757D8B"
             android:textSize="13sp"
+            app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/icShare"
             app:layout_constraintHorizontal_bias="0"
