--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_link.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_link.xml
@@ -30,6 +30,7 @@
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/mediumTextSize"
         android:visibility="gone"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toTopOf="@+id/tvLinkUrl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
@@ -49,6 +50,7 @@
         android:singleLine="true"
         android:textColor="@color/sceyt_color_gray_800"
         android:textSize="13sp"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="@+id/icLinkImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
