--- a/SceytChatUiKit/src/main/res/layout/sceyt_layout_searchable_toolbar.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_layout_searchable_toolbar.xml
@@ -26,9 +26,11 @@
         android:animateLayoutChanges="true"
         android:fontFamily="@font/roboto_medium"
         android:padding="10dp"
+        android:singleLine="true"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/bigTextSize"
         android:visibility="visible"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/icSearch"
         app:layout_constraintHorizontal_bias="0"
@@ -43,13 +45,15 @@
         android:layout_marginStart="15dp"
         android:animateLayoutChanges="true"
         android:background="@null"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:hint="@string/sceyt_search"
         android:padding="10dp"
+        android:singleLine="true"
         android:textColor="@color/sceyt_color_text_themed"
         android:textColorHint="@color/sceyt_color_hint"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toStartOf="@id/icClear"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/icBack"
         app:queryHint="Search" />
