Added RTL support in sceyt_custom_toolbar.xml.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_custom_toolbar.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_custom_toolbar.xml
@@ -28,6 +28,7 @@
         android:fontFamily="@font/roboto_medium"
         android:padding="10dp"
         android:singleLine="true"
+        android:textAlignment="viewStart"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/bigTextSize"
         app:layout_constraintBottom_toBottomOf="parent"
