Fixed some RTL issue in sceyt_item_share_channel.xml. Added support rendering in SceytAvatarView.kt. Improved logic to pause voice recording.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_share_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_share_channel.xml
@@ -35,6 +35,7 @@
         android:layout_marginHorizontal="12dp"
         android:fontFamily="@font/roboto_medium"
         android:lines="1"
+        android:textAlignment="viewStart"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/mediumTextSize"
         app:layout_constraintBottom_toTopOf="@+id/tvMemberCount"
@@ -51,6 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:lines="1"
+        android:textAlignment="viewStart"
         android:textColor="@color/sceyt_color_gray_800"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
